1.3.15.0/_sources/Reference/NodeReference/GafferCycles/CyclesRender.md.txt
CyclesRender
============

Performs offline batch rendering using the
Cycles renderer, or optionally generates
.xml files for later rendering using a SystemCommand
node.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

preTasks
--------

Input connections to upstream nodes which must be
executed before this node.

postTasks
---------

Input connections to nodes which must be
executed after this node, but which don't
need to be executed before downstream nodes.

task
----

Output connections to downstream nodes which must
not be executed until after this node.

dispatcher
----------

Container for custom plugs which dispatchers use to
control their behaviour.

dispatcher.batchSize
--------------------

Maximum number of frames to batch together when dispatching tasks.
If the node requires sequence execution `batchSize` will be ignored.

dispatcher.immediate
--------------------

Causes this node to be executed immediately upon dispatch,
rather than have its execution be scheduled normally by
the dispatcher. For instance, when using the LocalDispatcher,
the node will be executed immediately in the dispatching process
and not in a background process as usual.

When a node is made immediate, all upstream nodes are automatically
considered to be immediate too, regardless of their settings.

in
--

The scene to be rendered.

mode
----

The type of render to perform.

fileName
--------

The name of the .xml file to be generated when in
scene description mode.

**Supported file extensions** : xml

out
---

A direct pass-through of the input scene.

resolvedRenderer
----------------

The renderer that will be used, accounting for the value of the
`render:defaultRenderer` option if `renderer` is set to "Default".